Added path and changed the model

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -328,6 +328,46 @@
    "source": [
     "getattr(dict, \"__setitem__\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PosixPath('/home/nbiescas/Desktop/CVC/CVC_internship/omniglot.npz')"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Path(\"/home/nbiescas/Desktop/CVC/CVC_internship/omniglot.npz\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BASE_DIR = Path(\"/home/nbiescas/Desktop/CVC/CVC_internship\")\n",
+    "\n",
+    "DATA_PATH = BASE_DIR / \"omniglot.npz\""
+   ]
   }
  ],
  "metadata": {
