--- a/Qualitative_results.ipynb
+++ b/Qualitative_results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -16,31 +16,103 @@
    ],
    "source": [
     "import torch\n",
-    "from training.funsd import _funsd\n",
+    "from src.training.funsd import _funsd\n",
     "import torch.nn as nn\n",
-    "from paths import CHECKPOINTS\n",
-    "from models.VGAE import GAE, GSage_AE\n",
-    "from data.Data_Loaders import FUNSD_loader"
+    "from src.paths import CHECKPOINTS\n",
+    "from src.models.VGAE import GAE, GSage_AE\n",
+    "from src.data.Data_Loaders import FUNSD_loader"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{   'FEATURES': {   'add_embs': True,\n",
+      "                    'add_eweights': True,\n",
+      "                    'add_fudge': True,\n",
+      "                    'add_geom': True,\n",
+      "                    'add_hist': True,\n",
+      "                    'add_visual': True,\n",
+      "                    'num_polar_bins': 8},\n",
+      "    'GRAPHS': {   'data_type': 'img',\n",
+      "                  'edge_type': 'fully',\n",
+      "                  'node_granularity': 'gt'},\n",
+      "    'LOADER': {   'src_data': 'FUNSD'}}\n",
+      "\n",
+      "\n",
+      "TEST\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Creating graphs - GT: 100%|██████████| 50/50 [00:00<00:00, 169.57it/s]\n",
+      "adding features: 100%|██████████| 50/50 [00:18<00:00,  2.64it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = FUNSD_loader(train=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 3, 3, 3, 0, 0,\n",
+       "        0, 0, 3, 0, 0, 0, 0, 0, 0, 3, 3, 3, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "        2, 0, 0, 0, 3, 0, 0, 0, 2, 3, 3, 3, 0, 0, 0, 3, 3, 3, 0, 0, 3, 3, 3, 2,\n",
+       "        3, 3, 3, 3, 3, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 3, 3, 3, 3, 3, 3, 0,\n",
+       "        0, 0, 0, 0, 0, 2, 2])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.graphs[0].ndata['label']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([7406, 4])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import dgl\n",
+    "dgl.batch(data.graphs).ndata['feat'].shape"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([100, 3, 56])"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "input_tensor.size()"
+    "a = dgl.batch(data.graphs).edata['weights']"
    ]
   },
   {
@@ -337,6 +409,109 @@
     "test_data.graphs[num].num_nodes()\n",
     "plot_embeddings(S_t_sne[start:end], labels[start:end])\n",
     "test_data.print_graph(num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/nbiescas/miniconda3/envs/doc2graph/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 6,  7,  8,  9, 10,  1,  2,  3,  4,  5],\n",
+       "        [ 5,  5,  5,  6,  7,  2,  3,  4,  5,  6]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l = torch.tensor([[6,7,8,9,10], [5, 5, 5, 6, 7]])\n",
+    "s = torch.tensor([[1,2,3,4,5], [2,3,4,5,6]])\n",
+    "torch.cat((l, s), dim=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.cluster import KMeans\n",
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "a = np.random.rand(100, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kmeans = KMeans(n_clusters=4, random_state=0).fit(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = kmeans.labels_\n",
+    "counts = np.bincount(a)\n",
+    "print(np.argmax(counts))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 6, 12, 14, 20, 27, 30, 37, 42, 45, 46, 48, 49, 51, 52, 56, 57, 59,\n",
+       "       61, 64, 65, 67, 69, 72, 73, 74, 78, 79, 84, 90, 92, 94])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.where(kmeans.labels_ == 0)[0]"
    ]
   }
  ],
