Tried to solve the problems with after adding the node and edge classificiation. Also implemented to erase and edge

--- a/Qualitative_results.ipynb
+++ b/Qualitative_results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -52,8 +52,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Creating graphs - GT: 100%|██████████| 50/50 [00:00<00:00, 133.02it/s]\n",
-      "adding features: 100%|██████████| 50/50 [00:17<00:00,  2.86it/s]\n"
+      "Creating graphs - GT: 100%|██████████| 50/50 [00:00<00:00, 170.94it/s]\n",
+      "adding features: 100%|██████████| 50/50 [00:18<00:00,  2.77it/s]\n"
      ]
     }
    ],
@@ -63,38 +63,306 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "10432"
+       "Graph(num_nodes=53, num_edges=2756,\n",
+       "      ndata_schemes={'geom': Scheme(shape=(4,), dtype=torch.float32), 'feat': Scheme(shape=(1756,), dtype=torch.float32), 'norm': Scheme(shape=(1,), dtype=torch.float32), 'label': Scheme(shape=(), dtype=torch.int64)}\n",
+       "      edata_schemes={'feat': Scheme(shape=(6,), dtype=torch.float32), 'weights': Scheme(shape=(), dtype=torch.float32), 'label': Scheme(shape=(), dtype=torch.int64)})"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "torch.where(data.graphs[0].edata['label'] == 0)[0].__len__()"
+    "graph = data.graphs[2]\n",
+    "graph"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2"
+       "25"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.where(graph.edata['label'] == 1)[0].__len__()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([25])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Graph(num_nodes=53, num_edges=2731,\n",
+       "      ndata_schemes={'geom': Scheme(shape=(4,), dtype=torch.float32), 'feat': Scheme(shape=(1756,), dtype=torch.float32), 'norm': Scheme(shape=(1,), dtype=torch.float32), 'label': Scheme(shape=(), dtype=torch.int64)}\n",
+       "      edata_schemes={'feat': Scheme(shape=(6,), dtype=torch.float32), 'weights': Scheme(shape=(), dtype=torch.float32), 'label': Scheme(shape=(), dtype=torch.int64)})"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import dgl\n",
+    "\n",
+    "real_edges = graph.edata['label'].nonzero().squeeze(1)\n",
+    "E = len(real_edges)\n",
+    "\n",
+    "#E = graph.num_edges()\n",
+    "mask_rates = torch.FloatTensor(np.ones(E) * 1)\n",
+    "masks = torch.bernoulli(mask_rates)\n",
+    "mask_idx = masks.nonzero().squeeze(1) # Edges that we keep\n",
+    "\n",
+    "pos = real_edges[mask_idx]\n",
+    "print(pos.shape)\n",
+    "dgl.remove_edges(graph, pos.type(torch.int32))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([1996, 2164, 5357, 5873, 6491, 7427, 7462, 7463, 7548, 7551, 7554, 7736,\n",
+       "        9176, 9177, 9324], dtype=torch.int32)"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pos.type(torch.int32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([1995, 2000, 2063, 2579, 3517, 5355, 6491, 6652, 7429, 7456, 7457, 7460,\n",
+       "        7552, 7553, 7554, 7556, 7736, 9125, 9175, 9322, 9323])"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_src\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Graph(num_nodes=103, num_edges=20879,\n",
+       "      ndata_schemes={}\n",
+       "      edata_schemes={})"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_dst = torch.cat((new_dst, dst_inveted), dim = 0)\n",
+    "new_src = torch.cat((new_src, src_invented), dim = 0)\n",
+    "import dgl\n",
+    "dgl.graph((new_src, new_dst))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([1958, 1963, 1994, 1995, 1996, 2000, 2001, 2002, 2063, 2064, 2164, 2579,\n",
+       "        3414, 3517, 3624, 5355, 5356, 5357, 5443, 5873, 5976, 6079, 6491, 6594,\n",
+       "        6652, 6963, 7066, 7169, 7421, 7422, 7423, 7424, 7425, 7426, 7427, 7428,\n",
+       "        7429, 7455, 7456, 7457, 7458, 7459, 7460, 7461, 7462, 7463, 7548, 7549,\n",
+       "        7550, 7551, 7552, 7553, 7554, 7555, 7556, 7736, 7783, 7886, 9124, 9125,\n",
+       "        9172, 9173, 9174, 9175, 9176, 9177, 9320, 9321, 9322, 9323, 9324, 9325,\n",
+       "        9326, 9327])"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "real_edges"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.graphs[0].edata['label']\n",
+    "\n",
+    "idx = data.graphs[0].edata['label'].nonzero().squeeze(1)\n",
+    "src = src[idx]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l = data.graphs[0].edata['label'].nonzero().squeeze(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "src = data.graphs[0].edges()[0]\n",
+    "dst = data.graphs[0].edges()[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "        1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "        1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "        1, 1])"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.graphs[0].edata['label'][l]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "mask_rates = torch.FloatTensor(np.ones(10) * 0.5)\n",
+    "masks = torch.bernoulli(1 - mask_rates)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "DGLError",
+     "evalue": "Expect argument \"u\" to have data type torch.int32. But got torch.int64.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mDGLError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[89], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m dgl\u001b[39m.\u001b[39;49mremove_edges(data\u001b[39m.\u001b[39;49mgraphs[\u001b[39m0\u001b[39;49m], l)\n",
+      "File \u001b[0;32m~/miniconda3/envs/doc2graph/lib/python3.9/site-packages/dgl/transforms/functional.py:1755\u001b[0m, in \u001b[0;36mremove_edges\u001b[0;34m(g, eids, etype, store_ids)\u001b[0m\n\u001b[1;32m   1685\u001b[0m \u001b[39m\u001b[39m\u001b[39mr\u001b[39m\u001b[39m\"\"\"Remove the specified edges and return a new graph.\u001b[39;00m\n\u001b[1;32m   1686\u001b[0m \n\u001b[1;32m   1687\u001b[0m \u001b[39mAlso delete the features of the edges. The edges must exist in the graph.\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   1752\u001b[0m \u001b[39mremove_nodes\u001b[39;00m\n\u001b[1;32m   1753\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m   1754\u001b[0m g \u001b[39m=\u001b[39m g\u001b[39m.\u001b[39mclone()\n\u001b[0;32m-> 1755\u001b[0m g\u001b[39m.\u001b[39;49mremove_edges(eids, etype\u001b[39m=\u001b[39;49metype, store_ids\u001b[39m=\u001b[39;49mstore_ids)\n\u001b[1;32m   1756\u001b[0m \u001b[39mreturn\u001b[39;00m g\n",
+      "File \u001b[0;32m~/miniconda3/envs/doc2graph/lib/python3.9/site-packages/dgl/heterograph.py:620\u001b[0m, in \u001b[0;36mDGLHeteroGraph.remove_edges\u001b[0;34m(self, eids, etype, store_ids)\u001b[0m\n\u001b[1;32m    617\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_graph\u001b[39m.\u001b[39mnumber_of_etypes() \u001b[39m!=\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[1;32m    618\u001b[0m         \u001b[39mraise\u001b[39;00m DGLError(\u001b[39m'\u001b[39m\u001b[39mEdge type name must be specified if there are more than one \u001b[39m\u001b[39m'\u001b[39m \\\n\u001b[1;32m    619\u001b[0m                        \u001b[39m'\u001b[39m\u001b[39medge types.\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m--> 620\u001b[0m eids \u001b[39m=\u001b[39m utils\u001b[39m.\u001b[39;49mprepare_tensor(\u001b[39mself\u001b[39;49m, eids, \u001b[39m'\u001b[39;49m\u001b[39mu\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[1;32m    621\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(eids) \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m    622\u001b[0m     \u001b[39m# no edge to delete\u001b[39;00m\n\u001b[1;32m    623\u001b[0m     \u001b[39mreturn\u001b[39;00m\n",
+      "File \u001b[0;32m~/miniconda3/envs/doc2graph/lib/python3.9/site-packages/dgl/utils/checks.py:34\u001b[0m, in \u001b[0;36mprepare_tensor\u001b[0;34m(g, data, name)\u001b[0m\n\u001b[1;32m     32\u001b[0m \u001b[39mif\u001b[39;00m F\u001b[39m.\u001b[39mis_tensor(data):\n\u001b[1;32m     33\u001b[0m     \u001b[39mif\u001b[39;00m F\u001b[39m.\u001b[39mdtype(data) \u001b[39m!=\u001b[39m g\u001b[39m.\u001b[39midtype:\n\u001b[0;32m---> 34\u001b[0m         \u001b[39mraise\u001b[39;00m DGLError(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mExpect argument \u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mname\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\u001b[39m to have data type \u001b[39m\u001b[39m{\u001b[39;00mg\u001b[39m.\u001b[39midtype\u001b[39m}\u001b[39;00m\u001b[39m. \u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m     35\u001b[0m                        \u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mBut got \u001b[39m\u001b[39m{\u001b[39;00mF\u001b[39m.\u001b[39mdtype(data)\u001b[39m}\u001b[39;00m\u001b[39m.\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m     36\u001b[0m     \u001b[39mif\u001b[39;00m F\u001b[39m.\u001b[39mcontext(data) \u001b[39m!=\u001b[39m g\u001b[39m.\u001b[39mdevice \u001b[39mand\u001b[39;00m \u001b[39mnot\u001b[39;00m g\u001b[39m.\u001b[39mis_pinned():\n\u001b[1;32m     37\u001b[0m         \u001b[39mraise\u001b[39;00m DGLError(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mExpect argument \u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mname\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\u001b[39m to have device \u001b[39m\u001b[39m{\u001b[39;00mg\u001b[39m.\u001b[39mdevice\u001b[39m}\u001b[39;00m\u001b[39m. \u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m     38\u001b[0m                        \u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mBut got \u001b[39m\u001b[39m{\u001b[39;00mF\u001b[39m.\u001b[39mcontext(data)\u001b[39m}\u001b[39;00m\u001b[39m.\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "\u001b[0;31mDGLError\u001b[0m: Expect argument \"u\" to have data type torch.int32. But got torch.int64."
+     ]
+    }
+   ],
+   "source": [
+    "dgl.remove_edges(data.graphs[0], l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0, 2, 3, 5])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "masks.nonzero().squeeze(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m data\u001b[39m.\u001b[39medge_num_classes\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'data' is not defined"
+     ]
     }
    ],
    "source": [
