--- a/Qualitative_results.ipynb
+++ b/Qualitative_results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Creating graphs - GT: 100%|██████████| 50/50 [00:00<00:00, 170.94it/s]\n",
+      "Creating graphs - GT: 100%|██████████| 50/50 [00:00<00:00, 177.67it/s]\n",
       "adding features: 100%|██████████| 50/50 [00:18<00:00,  2.77it/s]\n"
      ]
     }
@@ -63,7 +63,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "FUNSD TEST dataset:\n",
+      "-> graphs: 50\n",
+      "-> node labels: ['answer' 'header' 'other' 'question']\n",
+      "-> edge labels: ['none' 'pair']\n",
+      "-> node features: 1756\n",
+      "-> edge type: fully\n",
+      "-> textual feats: True\n",
+      "-> visual feats: True\n",
+      "-> edge feats: True\n",
+      "-> graph example: Graph(num_nodes=103, num_edges=10506,\n",
+      "      ndata_schemes={'geom': Scheme(shape=(4,), dtype=torch.float32), 'feat': Scheme(shape=(1756,), dtype=torch.float32), 'norm': Scheme(shape=(1,), dtype=torch.float32), 'label': Scheme(shape=(), dtype=torch.int64)}\n",
+      "      edata_schemes={'feat': Scheme(shape=(6,), dtype=torch.float32), 'weights': Scheme(shape=(), dtype=torch.float32), 'label': Scheme(shape=(), dtype=torch.int64)})\n"
+     ]
+    }
+   ],
+   "source": [
+    "data.get_info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +103,7 @@
        "      edata_schemes={'feat': Scheme(shape=(6,), dtype=torch.float32), 'weights': Scheme(shape=(), dtype=torch.float32), 'label': Scheme(shape=(), dtype=torch.int64)})"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,6 +111,66 @@
    "source": [
     "graph = data.graphs[2]\n",
     "graph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import dgl\n",
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "real_edges = graph.edata['label'].nonzero().squeeze(1)\n",
+    "E = len(real_edges)\n",
+    "mask_rates = torch.FloatTensor(np.ones(E) * 0.8)\n",
+    "masks = torch.bernoulli(mask_rates)\n",
+    "mask_idx = masks.nonzero().squeeze(1)\n",
+    "pos = real_edges[mask_idx]\n",
+    "\n",
+    "graph2 = dgl.remove_edges(graph, pos.type(torch.int32)), pos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([2756])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "graph.edata['label'].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([2735])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "graph2[0].edata['label'].shape"
    ]
   },
   {
@@ -653,6 +742,104 @@
     "        plt.ylim(ylim[0], ylim[1])\n",
     "    plt.legend(fashion_mnist_classes)\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "from src.models.Drop_edge import E2E\n",
+    "import math\n",
+    "layers_dimensions = (1756, 600, 400, 100)\n",
+    "edge_pred_features = int((math.log2(8) + data.node_num_classes)*2)\n",
+    "model = E2E(node_classes = data.node_num_classes, \n",
+    "                    edge_classes = data.edge_num_classes, \n",
+    "                    dimensions_layers = layers_dimensions, \n",
+    "                    dropout=0.2, \n",
+    "                    edge_pred_features=edge_pred_features,\n",
+    "                    drop_rate = 0).to('cuda:0')\n",
+    "\n",
+    "model.load_state_dict(torch.load(CHECKPOINTS / 'Run_2.pth'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'compute_auc_mc' from 'src.evaluation' (/home/nbiescas/Desktop/CVC/CVC_internship/src/evaluation.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[37], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msrc\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mevaluation\u001b[39;00m \u001b[39mimport\u001b[39;00m SVM_classifier, metrics_MSE_mean, metrics_MSE_sum, kmeans_classifier, compute_auc_mc, get_f1, get_binary_accuracy_and_f1\n\u001b[1;32m      2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msrc\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mtraining\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mutils\u001b[39;00m \u001b[39mimport\u001b[39;00m compute_crossentropy_loss\n\u001b[1;32m      4\u001b[0m device \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mcuda:0\u001b[39m\u001b[39m'\u001b[39m\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'compute_auc_mc' from 'src.evaluation' (/home/nbiescas/Desktop/CVC/CVC_internship/src/evaluation.py)"
+     ]
+    }
+   ],
+   "source": [
+    "from src.evaluation import SVM_classifier, metrics_MSE_mean, metrics_MSE_sum, kmeans_classifier, compute_auc_mc, get_f1, get_binary_accuracy_and_f1\n",
+    "from src.training.utils import compute_crossentropy_loss\n",
+    "\n",
+    "device = 'cuda:0'\n",
+    "def test_funsd(model, test_graph, criterion, config):\n",
+    "    with torch.no_grad():\n",
+    "        model.eval()\n",
+    "        n_scores, e_scores, pred_features = model(test_graph, test_graph.ndata['feat'].to(device))\n",
+    "\n",
+    "        recons_loss = criterion(pred_features.to(device), test_graph.ndata['feat'].to(device))\n",
+    "        n_loss = compute_crossentropy_loss(n_scores.to(device), test_graph.ndata['label'].to(device))\n",
+    "        e_loss = compute_crossentropy_loss(e_scores.to(device), test_graph.edata['label'].to(device))\n",
+    "        test_loss = n_loss + e_loss + recons_loss\n",
+    "\n",
+    "        auc = compute_auc_mc(e_scores.to(device), test_graph.edata['label'].to(device))\n",
+    "        _, preds = torch.max(F.softmax(e_scores, dim=1), dim=1)\n",
+    "\n",
+    "        accuracy, f1 = get_binary_accuracy_and_f1(preds, test_graph.edata['label'])\n",
+    "        _, classes_f1 = get_binary_accuracy_and_f1(preds, test_graph.edata['label'], per_class=True)\n",
+    "\n",
+    "        macro, micro = get_f1(n_scores, test_graph.ndata['label'].to(device))\n",
+    "\n",
+    "        ################* STEP 4: RESULTS ################\n",
+    "        print(\"\\n### BEST RESULTS ###\")\n",
+    "        print(\"AUC {:.4f}\".format(auc))\n",
+    "        print(\"Accuracy {:.4f}\".format(accuracy))\n",
+    "        print(\"F1 Edges: Macro {:.4f} - Micro {:.4f}\".format(f1[0], f1[1]))\n",
+    "        print(\"F1 Edges: None {:.4f} - Pairs {:.4f}\".format(classes_f1[0], classes_f1[1]))\n",
+    "        print(\"F1 Nodes: Macro {:.4f} - Micro {:.4f}\".format(macro, micro))\n",
+    "\n",
+    "        #log_wandb(\"Test\", recons_loss, node_reconstruction_loss, graph_reconstructin_loss)\n",
+    "\n",
+    "    return test_loss\n",
+    "\n",
+    "def test_evaluation(model, train_graph, criterion, config):\n",
+    "    data_test = FUNSD_loader(train=False) #Loading test set graphs\n",
+    "    data_test.get_info()\n",
+    "\n",
+    "    test_graph = dgl.batch(data_test.graphs)\n",
+    "    test_graph = test_graph.int().to(device)\n",
+    "    \n",
+    "    test_loss = test_funsd(model, test_graph, criterion, config)\n",
+    "    kmeans_classifier(model, train_graph, test_graph)\n",
+    "    SVM_classifier(model, train_graph, test_graph)\n",
+    "\n",
+    "    return test_loss.item()\n"
    ]
   },
   {
