--- a/Qualitative_results.ipynb
+++ b/Qualitative_results.ipynb
@@ -794,52 +794,7 @@
     }
    ],
    "source": [
-    "from src.evaluation import SVM_classifier, metrics_MSE_mean, metrics_MSE_sum, kmeans_classifier, compute_auc_mc, get_f1, get_binary_accuracy_and_f1\n",
-    "from src.training.utils import compute_crossentropy_loss\n",
-    "\n",
-    "device = 'cuda:0'\n",
-    "def test_funsd(model, test_graph, criterion, config):\n",
-    "    with torch.no_grad():\n",
-    "        model.eval()\n",
-    "        n_scores, e_scores, pred_features = model(test_graph, test_graph.ndata['feat'].to(device))\n",
-    "\n",
-    "        recons_loss = criterion(pred_features.to(device), test_graph.ndata['feat'].to(device))\n",
-    "        n_loss = compute_crossentropy_loss(n_scores.to(device), test_graph.ndata['label'].to(device))\n",
-    "        e_loss = compute_crossentropy_loss(e_scores.to(device), test_graph.edata['label'].to(device))\n",
-    "        test_loss = n_loss + e_loss + recons_loss\n",
-    "\n",
-    "        auc = compute_auc_mc(e_scores.to(device), test_graph.edata['label'].to(device))\n",
-    "        _, preds = torch.max(F.softmax(e_scores, dim=1), dim=1)\n",
-    "\n",
-    "        accuracy, f1 = get_binary_accuracy_and_f1(preds, test_graph.edata['label'])\n",
-    "        _, classes_f1 = get_binary_accuracy_and_f1(preds, test_graph.edata['label'], per_class=True)\n",
-    "\n",
-    "        macro, micro = get_f1(n_scores, test_graph.ndata['label'].to(device))\n",
-    "\n",
-    "        ################* STEP 4: RESULTS ################\n",
-    "        print(\"\\n### BEST RESULTS ###\")\n",
-    "        print(\"AUC {:.4f}\".format(auc))\n",
-    "        print(\"Accuracy {:.4f}\".format(accuracy))\n",
-    "        print(\"F1 Edges: Macro {:.4f} - Micro {:.4f}\".format(f1[0], f1[1]))\n",
-    "        print(\"F1 Edges: None {:.4f} - Pairs {:.4f}\".format(classes_f1[0], classes_f1[1]))\n",
-    "        print(\"F1 Nodes: Macro {:.4f} - Micro {:.4f}\".format(macro, micro))\n",
-    "\n",
-    "        #log_wandb(\"Test\", recons_loss, node_reconstruction_loss, graph_reconstructin_loss)\n",
-    "\n",
-    "    return test_loss\n",
-    "\n",
-    "def test_evaluation(model, train_graph, criterion, config):\n",
-    "    data_test = FUNSD_loader(train=False) #Loading test set graphs\n",
-    "    data_test.get_info()\n",
-    "\n",
-    "    test_graph = dgl.batch(data_test.graphs)\n",
-    "    test_graph = test_graph.int().to(device)\n",
-    "    \n",
-    "    test_loss = test_funsd(model, test_graph, criterion, config)\n",
-    "    kmeans_classifier(model, train_graph, test_graph)\n",
-    "    SVM_classifier(model, train_graph, test_graph)\n",
-    "\n",
-    "    return test_loss.item()\n"
+    " [\"on top of\", \"vertically near\", \"horizontally near\"]"
    ]
   },
   {
