Added two new models that change how the message passing is done

--- a/Qualitative_results.ipynb
+++ b/Qualitative_results.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/nbiescas/miniconda3/envs/doc2graph/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pickle\n",
     "import dgl\n",
@@ -22,8 +13,269 @@
     "import random\n",
     "from scipy.spatial.distance import pdist\n",
     "\n",
-    "with open('/home/nbiescas/Desktop/CVC/CVC_internship/PKL_Graphs/V2_Kmeans_dis_ntresh_discrete/test_Kmeans_dis_ntresh_discrete.pkl', 'rb') as f:\n",
+    "with open('/home/nbiescas/Desktop/CVC/CVC_internship/PKL_Graphs/V2_Kmeans_dis_ntresh_discrete/train_Kmeans_dis_ntresh_discrete.pkl', 'rb') as f:\n",
     "    train_graph = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('geom', torch.Size([27, 4])),\n",
+       " ('feat', torch.Size([27, 4])),\n",
+       " ('norm', torch.Size([27, 1])),\n",
+       " ('label', torch.Size([27])),\n",
+       " ('Geometric', torch.Size([27, 9])),\n",
+       " ('area', torch.Size([27])),\n",
+       " ('regional_encoding', torch.Size([27, 4]))]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d = train_graph[0].ndata\n",
+    "s = lambda x: (x, d[x].shape)\n",
+    "list(map(s, train_graph[0].ndata.keys()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Sequential(\n",
+       "  (0): Linear(in_features=128, out_features=64, bias=True)\n",
+       "  (1): ReLU()\n",
+       "  (2): Linear(in_features=64, out_features=32, bias=True)\n",
+       "  (3): ReLU()\n",
+       "  (4): Linear(in_features=32, out_features=16, bias=True)\n",
+       "  (5): ReLU()\n",
+       "  (6): Linear(in_features=16, out_features=8, bias=True)\n",
+       "  (7): ReLU()\n",
+       "  (8): Linear(in_features=8, out_features=4, bias=True)\n",
+       "  (9): ReLU()\n",
+       "  (10): Linear(in_features=4, out_features=2, bias=True)\n",
+       "  (11): ReLU()\n",
+       ")"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import torch.nn as nn\n",
+    "\n",
+    "layers_dimensions = [128, 64, 32, 16, 8, 4, 2]\n",
+    "\n",
+    "layers = []\n",
+    "for i in range(len(layers_dimensions) - 1):\n",
+    "    layers.append(nn.Linear(layers_dimensions[i], layers_dimensions[i+1], bias=True))\n",
+    "    layers.append(nn.ReLU())\n",
+    "\n",
+    "model = nn.Sequential(*layers)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "32"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d = train_graph[0].edata\n",
+    "s = lambda x: (x, d[x].shape)\n",
+    "list(map(s, train_graph[0].edata.keys()))\n",
+    "\n",
+    "\n",
+    "def obtain_size(graph, nodes, edges):\n",
+    "    t = 9\n",
+    "    for n in nodes:\n",
+    "        if len(graph.ndata[n].shape) == 1:\n",
+    "            t += 1\n",
+    "        else:\n",
+    "            t += graph.ndata[n].shape[-1]\n",
+    "    for e in edges:\n",
+    "        if len(graph.edata[e].shape) == 1:\n",
+    "            t += 1\n",
+    "        else:\n",
+    "            t += graph.edata[e].shape[-1]\n",
+    "    return t\n",
+    "\n",
+    "obtain_size(train_graph[0],  ['Geometric'],['angle', 'discrete_bin_edges', 'feat'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.6680, 0.7054, 0.2541, 0.7952, 0.2120, 0.0303, 0.9888, 0.7006, 0.8004,\n",
+       "        0.0000, 0.7803, 0.0000, 0.0000, 0.6800, 1.1624, 0.2505, 0.5688, 0.9027,\n",
+       "        0.5977, 0.9659, 1.0346, 0.9046, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "        0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "        0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+       "        0.0228, 0.0687, 0.1809, 0.4672, 0.6158, 0.6468, 0.6294, 0.6389, 0.4659,\n",
+       "        0.8809, 0.8525, 0.8887, 0.3869, 0.7557, 0.7504, 0.3203, 0.5170, 0.9318,\n",
+       "        0.5710, 0.2858, 0.6219, 0.5258, 0.5961, 0.4232, 0.6519, 0.7075, 0.5009,\n",
+       "        0.5821, 0.9161, 0.8947, 0.8805, 0.7940, 0.7975, 0.7718, 0.7182, 0.7595,\n",
+       "        0.6371, 0.6097, 0.7400, 0.7308])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l, _ = dgl.load_graphs('/home/nbiescas/Desktop/CVC/CVC_internship/runs/run90_final/graphs_contrastive/train_contrastive.bin')\n",
+    "\n",
+    "l[0].ndata['feat'][:, -4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['feat', 'distance_not_tresh', 'weights', 'label', 'angle', 'distance', 'discrete_bin_edges'])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_graph[0].edata.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_graph[0].ndata['regional_encoding'] = train_graph[0].ndata['Geometric'][:, 5:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.2966, 0.4120, 0.3530, 0.4230],\n",
+       "        [0.6824, 0.4110, 0.7270, 0.4240],\n",
+       "        [0.6640, 0.3560, 0.7205, 0.3670],\n",
+       "        [0.0459, 0.3090, 0.1890, 0.3400],\n",
+       "        [0.2730, 0.1450, 0.3281, 0.1590],\n",
+       "        [0.2717, 0.1720, 0.3491, 0.1830],\n",
+       "        [0.3241, 0.1960, 0.3937, 0.2070],\n",
+       "        [0.3228, 0.2210, 0.3871, 0.2350],\n",
+       "        [0.1115, 0.0200, 0.1614, 0.0370],\n",
+       "        [0.0472, 0.0100, 0.0735, 0.0180],\n",
+       "        [0.0735, 0.0770, 0.1483, 0.0840],\n",
+       "        [0.2743, 0.0570, 0.9396, 0.1310],\n",
+       "        [0.8583, 0.0100, 0.9383, 0.0740],\n",
+       "        [0.4055, 0.1340, 0.8255, 0.1550],\n",
+       "        [0.4108, 0.1650, 0.5696, 0.1810],\n",
+       "        [0.4055, 0.1910, 0.6811, 0.2100],\n",
+       "        [0.4068, 0.2180, 0.5420, 0.2330],\n",
+       "        [0.2297, 0.2400, 0.8307, 0.2570],\n",
+       "        [0.2310, 0.2710, 0.4567, 0.2840],\n",
+       "        [0.4711, 0.2960, 0.6824, 0.3110],\n",
+       "        [0.4711, 0.3240, 0.6969, 0.3420],\n",
+       "        [0.7362, 0.3510, 0.8386, 0.3680],\n",
+       "        [0.7664, 0.4080, 0.8924, 0.4240],\n",
+       "        [0.4055, 0.4090, 0.5302, 0.4240],\n",
+       "        [0.0709, 0.4390, 0.1719, 0.4530],\n",
+       "        [0.0446, 0.1520, 0.2073, 0.2230],\n",
+       "        [0.0472, 0.0940, 0.1890, 0.1390]])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_graph[0].ndata['geom']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.2966, 0.4120, 0.3530, 0.4230],\n",
+       "        [0.6824, 0.4110, 0.7270, 0.4240],\n",
+       "        [0.6640, 0.3560, 0.7205, 0.3670],\n",
+       "        [0.0459, 0.3090, 0.1890, 0.3400],\n",
+       "        [0.2730, 0.1450, 0.3281, 0.1590],\n",
+       "        [0.2717, 0.1720, 0.3491, 0.1830],\n",
+       "        [0.3241, 0.1960, 0.3937, 0.2070],\n",
+       "        [0.3228, 0.2210, 0.3871, 0.2350],\n",
+       "        [0.1115, 0.0200, 0.1614, 0.0370],\n",
+       "        [0.0472, 0.0100, 0.0735, 0.0180],\n",
+       "        [0.0735, 0.0770, 0.1483, 0.0840],\n",
+       "        [0.2743, 0.0570, 0.9396, 0.1310],\n",
+       "        [0.8583, 0.0100, 0.9383, 0.0740],\n",
+       "        [0.4055, 0.1340, 0.8255, 0.1550],\n",
+       "        [0.4108, 0.1650, 0.5696, 0.1810],\n",
+       "        [0.4055, 0.1910, 0.6811, 0.2100],\n",
+       "        [0.4068, 0.2180, 0.5420, 0.2330],\n",
+       "        [0.2297, 0.2400, 0.8307, 0.2570],\n",
+       "        [0.2310, 0.2710, 0.4567, 0.2840],\n",
+       "        [0.4711, 0.2960, 0.6824, 0.3110],\n",
+       "        [0.4711, 0.3240, 0.6969, 0.3420],\n",
+       "        [0.7362, 0.3510, 0.8386, 0.3680],\n",
+       "        [0.7664, 0.4080, 0.8924, 0.4240],\n",
+       "        [0.4055, 0.4090, 0.5302, 0.4240],\n",
+       "        [0.0709, 0.4390, 0.1719, 0.4530],\n",
+       "        [0.0446, 0.1520, 0.2073, 0.2230],\n",
+       "        [0.0472, 0.0940, 0.1890, 0.1390]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_graph[0].ndata['Geometric'][:, :4]"
    ]
   },
   {
